{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 344,
  "lineage": "8209799b-62f4-41c6-7141-e130e80c7989",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks-control-plane-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.10.20.0/26",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0113bb2d196fcff9b",
            "route_table_id": "rtb-0dbc9b7100d74af1f",
            "subnet_id": "subnet-0413734e37748140f"
          },
          "dependencies": [
            "aws_subnet.eks-control-plane-subnets"
          ]
        },
        {
          "index_key": "10.10.20.128/26",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbd1772b59fe9a3d",
            "route_table_id": "rtb-0dbc9b7100d74af1f",
            "subnet_id": "subnet-0eb3951bf82e17655"
          },
          "dependencies": [
            "aws_subnet.eks-control-plane-subnets"
          ]
        },
        {
          "index_key": "10.10.20.64/26",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebe49ff2a9c2c03e",
            "route_table_id": "rtb-0dbc9b7100d74af1f",
            "subnet_id": "subnet-0437ac9156cc3b0e7"
          },
          "dependencies": [
            "aws_subnet.eks-control-plane-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks-worker-route-table-az-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.10.32.0/20",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09352386408a5f744",
            "route_table_id": "rtb-0dbc9b7100d74af1f",
            "subnet_id": "subnet-08971135b4932f745"
          },
          "dependencies": [
            "aws_subnet.eks-worker-az-a-subnets"
          ]
        },
        {
          "index_key": "10.10.48.0/20",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02993a7afb85adf1d",
            "route_table_id": "rtb-0dbc9b7100d74af1f",
            "subnet_id": "subnet-0da63288c228f1343"
          },
          "dependencies": [
            "aws_subnet.eks-worker-az-a-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-control-plane-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.10.20.0/26",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:087625668494:subnet/subnet-0413734e37748140f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.20.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0413734e37748140f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087625668494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "eks-demo-01-control-plane-subnet-ap-southeast-1a",
              "Tenant": "xingba",
              "Terraform": "1",
              "kubernetes.io/cluster/eks-demo-01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "eks-demo-01-control-plane-subnet-ap-southeast-1a",
              "Tenant": "xingba",
              "Terraform": "1",
              "kubernetes.io/cluster/eks-demo-01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-349dc850"
          },
          "create_before_destroy": true
        },
        {
          "index_key": "10.10.20.128/26",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:087625668494:subnet/subnet-0eb3951bf82e17655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.20.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb3951bf82e17655",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087625668494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "eks-demo-01-control-plane-subnet-ap-southeast-1c",
              "Tenant": "xingba",
              "Terraform": "1",
              "kubernetes.io/cluster/eks-demo-01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "eks-demo-01-control-plane-subnet-ap-southeast-1c",
              "Tenant": "xingba",
              "Terraform": "1",
              "kubernetes.io/cluster/eks-demo-01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-349dc850"
          },
          "create_before_destroy": true
        },
        {
          "index_key": "10.10.20.64/26",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:087625668494:subnet/subnet-0437ac9156cc3b0e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.20.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0437ac9156cc3b0e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087625668494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "eks-demo-01-control-plane-subnet-ap-southeast-1b",
              "Tenant": "xingba",
              "Terraform": "1",
              "kubernetes.io/cluster/eks-demo-01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "eks-demo-01-control-plane-subnet-ap-southeast-1b",
              "Tenant": "xingba",
              "Terraform": "1",
              "kubernetes.io/cluster/eks-demo-01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-349dc850"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-worker-az-a-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.10.32.0/20",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:087625668494:subnet/subnet-08971135b4932f745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08971135b4932f745",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087625668494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "eks-demo-01-worker-subnet-a-0",
              "Tenant": "xingba",
              "Terraform": "1",
              "kubernetes.io/cluster/eks-demo-01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "eks-demo-01-worker-subnet-a-0",
              "Tenant": "xingba",
              "Terraform": "1",
              "kubernetes.io/cluster/eks-demo-01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-349dc850"
          },
          "create_before_destroy": true
        },
        {
          "index_key": "10.10.48.0/20",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:087625668494:subnet/subnet-0da63288c228f1343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da63288c228f1343",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087625668494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "eks-demo-01-worker-subnet-a-1",
              "Tenant": "xingba",
              "Terraform": "1",
              "kubernetes.io/cluster/eks-demo-01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "eks-demo-01-worker-subnet-a-1",
              "Tenant": "xingba",
              "Terraform": "1",
              "kubernetes.io/cluster/eks-demo-01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-349dc850"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.default-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:087625668494:security-group/sg-09ced43316044bbb1",
            "description": "Security group for default",
            "egress": [],
            "id": "sg-09ced43316044bbb1",
            "ingress": [],
            "name": "default-security-group-20230613005111268900000001",
            "name_prefix": "default-security-group-",
            "owner_id": "087625668494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-security-group"
            },
            "tags_all": {
              "Name": "default-security-group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-349dc850"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:087625668494:security-group/sg-0cd5ee13c52b88402",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea29f8c3629fae29"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea29f8c3629fae29"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-0cd5ee13c52b88402",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea29f8c3629fae29"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-demo-01-cluster-20230613005112882700000003",
            "name_prefix": "eks-demo-01-cluster-",
            "owner_id": "087625668494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "eks-demo-01-cluster",
              "Tenant": "xingba",
              "Terraform": "1",
              "k8s.io/cluster-autoscaler/eks-demo-01": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "nodegroup-role": "worker"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "eks-demo-01-cluster",
              "Tenant": "xingba",
              "Terraform": "1",
              "k8s.io/cluster-autoscaler/eks-demo-01": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "nodegroup-role": "worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-349dc850"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:087625668494:security-group/sg-0ea29f8c3629fae29",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd5ee13c52b88402"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0ea29f8c3629fae29",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd5ee13c52b88402"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd5ee13c52b88402"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "eks-demo-01-node-20230613005111270900000002",
            "name_prefix": "eks-demo-01-node-",
            "owner_id": "087625668494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "eks-demo-01-node",
              "Tenant": "xingba",
              "Terraform": "1",
              "k8s.io/cluster-autoscaler/eks-demo-01": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "nodegroup-role": "worker"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "eks-demo-01-node",
              "Tenant": "xingba",
              "Terraform": "1",
              "k8s.io/cluster-autoscaler/eks-demo-01": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "nodegroup-role": "worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-349dc850"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-862113270",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cd5ee13c52b88402",
            "security_group_rule_id": "sgr-04ee9a72df90ba6c5",
            "self": false,
            "source_security_group_id": "sg-0ea29f8c3629fae29",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1590759607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cd5ee13c52b88402",
            "security_group_rule_id": "sgr-0c19be95fab88238b",
            "self": false,
            "source_security_group_id": "sg-0ea29f8c3629fae29",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-605500750",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cd5ee13c52b88402",
            "security_group_rule_id": "sgr-04f9840bd5ede0b3d",
            "self": false,
            "source_security_group_id": "sg-0ea29f8c3629fae29",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3771504396",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ea29f8c3629fae29",
            "security_group_rule_id": "sgr-06483bc5243c65fd2",
            "self": false,
            "source_security_group_id": "sg-0cd5ee13c52b88402",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-630284988",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ea29f8c3629fae29",
            "security_group_rule_id": "sgr-05e04fcab9cad5323",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-4199505826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ea29f8c3629fae29",
            "security_group_rule_id": "sgr-0725b5ffda9e81b84",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-2228320943",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ea29f8c3629fae29",
            "security_group_rule_id": "sgr-0725d4e55a9ffa91a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4110515280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ea29f8c3629fae29",
            "security_group_rule_id": "sgr-08133aa2770173d3c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2070347318",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ea29f8c3629fae29",
            "security_group_rule_id": "sgr-0f926bfb83d661b2b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1541905838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ea29f8c3629fae29",
            "security_group_rule_id": "sgr-02634522a2bb57726",
            "self": false,
            "source_security_group_id": "sg-0cd5ee13c52b88402",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2371185618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ea29f8c3629fae29",
            "security_group_rule_id": "sgr-0df04f2fc9fd7aed4",
            "self": false,
            "source_security_group_id": "sg-0cd5ee13c52b88402",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-459558946",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ea29f8c3629fae29",
            "security_group_rule_id": "sgr-0ad30bf06adb75ad7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3208377293",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ea29f8c3629fae29",
            "security_group_rule_id": "sgr-0f926bfb83d661b2b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"node_group_01\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:087625668494:security-group/sg-037b62aa433cacffe",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-037b62aa433cacffe",
            "ingress": [],
            "name": "eks-demo-01-sg-ng-az-a",
            "name_prefix": "",
            "owner_id": "087625668494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "eks-demo-01-sg-ng-az-a",
              "Tenant": "xingba",
              "Terraform": "1",
              "k8s.io/cluster-autoscaler/eks-demo-01": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "nodegroup-role": "worker"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "eks-demo-01-sg-ng-az-a",
              "Tenant": "xingba",
              "Terraform": "1",
              "k8s.io/cluster-autoscaler/eks-demo-01": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "nodegroup-role": "worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-349dc850"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.eks-worker-az-a-subnets",
            "module.default-security-group.aws_security_group.this",
            "module.default-security-group.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}